tests/__snapshots__/validation-plugins-wrong-list-item-type-stderr.snap.txt
Error: Item of the 'plugins' list must be of type string.

  2 |   "plugins": [
  3 |     "./tstyche-plugin.js",
  4 |     true
    |     ~~~~
  5 |   ],
  6 |   "testFileMatch": [
  7 |     "examples/*.test.*"

      at ./tstyche.config.json:4:5

